Adjusted issue square font sizes, wrapped long words

--- a/src/sass/components/_intro-modal.scss
+++ b/src/sass/components/_intro-modal.scss
@@ -301,7 +301,7 @@
   &__square {
     position: relative;
     text-align: left;
-    padding: $space-xs;
+    padding: $space-xxs;
 
     &-image {
       height: 100%;
@@ -327,28 +327,29 @@
       right: 12px;
       bottom: 12px;
       left: 12px;
-      font-size: .875rem;
+      font-size: 1rem;
+      word-wrap: break-word;
       text-shadow: 1px 1px 2px rgba($black, .6);
 
       @include breakpoints (xsmall-bootstrap small-bootstrap) {
         right: 10px;
         bottom: 10px;
         left: 10px;
-        font-size: .65rem;
+        font-size: .9rem;
       }
 
       @include breakpoints (iphone5 mid-small) {
         right: 10px;
         bottom: 10px;
         left: 10px;
-        font-size: .65rem;
+        font-size: .9rem;
       }
 
       @include breakpoints (max iphone5) {
         right: 8px;
         bottom: 8px;
         left: 8px;
-        font-size: .6rem;
+        font-size: .9rem;
       }
     }
 
